--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         style="max-height: 80px;">
 
         <!-- Then put toasts within -->
-        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="element">
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="element" data-delay="10000">
             <div class="toast-header">
-                <img src="assets/img/success-icon.png" style="max-width: 30px;" class="rounded mr-2"
+                <img src="assets/img/success-icon.png" style="max-width: 50px;" class="rounded mr-2"
                     alt="Mensagem de registro">
                 <strong class="mr-auto">Finanças Pessoais</strong>
                 <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
@@ -82,7 +82,7 @@
                 </button>
             </div>
             <div class="toast-body">
-                Salvo com sucesso!
+                Registro salvo com sucesso!
             </div>
         </div>
     </div>
