--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTable"
-                            aria-expanded="false" aria-controls="collapseTable">Registros</span></a>
+                            aria-expanded="false" aria-controls="collapseTable" id="registros">Registros</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseProfile"
@@ -86,8 +86,7 @@
             </div>
         </div>
     </div>
-
-    <div class="container col-md-10">
+    <div class="container-fluid">
         <div class="collapse table-responsive-md" id="collapseTable">
             <div class="card card-body">
                 <table class="table">
@@ -109,8 +108,11 @@
                 </table>
             </div>
         </div>
+    </div>
+
+    <div class="container">
         <form action="">
-            <fieldset class="tipo-entrada">
+            <fieldset class="tipo-entrada mb-2">
                 <legend class="my-1 mr-2 text-secondary" for="inlineFormCustomSelectPref">Selecione o tipo de entrada*
                 </legend>
 
@@ -128,30 +130,38 @@
                 </div>
             </fieldset>
 
-            <div class="form-group">
+            <div class="form-group mb-6">
                 <label class="text-secondary" for="descricao">Descrição*</label>
-                <input type="text" class="form-control col-md-10" id="descricao" placeholder="Ex.: Conta de telefone"
+                <input type="text" class="form-control col-md-8" id="descricao" placeholder="Ex.: Conta de telefone"
                     required>
             </div>
-            <div class="form-row">
-                <div class="form-group col-md-5">
-                    <label class="text-secondary" for="valor">Valor*</label>
-                    <input type="text" class="form-control" id="valor" data-thousands="." data-decimal=","
-                        data-prefix="R$ " placeholder="R$ 0,00" required>
+            <div class="form-row mb-2">
+                <div class="form-group col-md-4">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Valor*</span>
+                        </div>
+                        <input type="text" class="form-control" id="valor" data-thousands="." data-decimal=","
+                            data-prefix="R$ " placeholder="R$ 0,00" required>
+                    </div>
                 </div>
-                <div class="form-group col-md-5">
-                    <label class="text-secondary" for="desconto">Desconto</label>
-                    <input type="text" class="form-control" id="desconto" data-thousands="." data-decimal=","
-                        data-prefix="R$ " placeholder="R$ 0,00">
+                <div class="form-group col-md-4">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Desconto</span>
+                        </div>
+                        <input type="text" class="form-control" id="desconto" data-thousands="." data-decimal=","
+                            data-prefix="R$ " placeholder="R$ 0,00">
+                    </div>
                 </div>
             </div>
 
             <div class="form-row data">
-                <div class="form-group col-md-5">
+                <div class="form-group col-md-3">
                     <label class="text-secondary" for="dtVenc">Data de vencimento*</label>
                     <input type="date" class="form-control" id="dtVenc" placeholder="dd/mm/aaaa" required>
                 </div>
-                <div class="form-group col-md-5">
+                <div class="form-group col-md-3">
                     <label class="text-secondary" for="dtLiq">Data de liquidação*</label>
                     <input type="date" class="form-control" id="dtLiq" placeholder="dd/mm/aaaa" required>
                 </div>
@@ -159,7 +169,7 @@
 
             <div class="form-group">
                 <label class="text-secondary" for="origem">Origem*</label>
-                <input type="text" class="form-control col-md-10" id="origem" placeholder="Ex.: Operadora XYZ" required>
+                <input type="text" class="form-control col-md-8" id="origem" placeholder="Ex.: Operadora XYZ" required>
             </div>
             <input class="btn btn-primary btn-lg" type="submit" value="Registrar" onclick="cadastrar()">
 
